V2 - home page and doormat link spacing fix

--- a/src/_defaults.scss
+++ b/src/_defaults.scss
@@ -125,6 +125,7 @@ h1 {
 .gc-srvinfo, .gc-drmt {
 	p {
 		font-size: 17px;
+		line-height: 1.5em;
 	}
 
 	// Overwride sizing
